ns-dev-system/db/adminer-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer

spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org
