ns-dev-system/db/mariadb-stateful-set-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb

spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org
