ns-dev-system/db/mongo-stateful-set-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo

spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org
      containers:
        - name: mongo
          resources:
            limits:
              memory: "1G"
