ns-dev-system/db/adminer-ingress-route-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adminer

spec:
  routes:
    - kind: Rule
      match: Host(`adminer.ns-dev.trapti.tech`)
      middlewares:
        - name: auth-trapti-tech-hard
          namespace: auth
      services:
        - namespace: ns-dev-system
          kind: Service
          name: adminer
          port: http
          scheme: http
          weight: 1
